Add webhook-based integrations for GitHub, Slack, and Linear
Replace polling-based sync with real-time webhooks. Add WebhookController,
webhook signature verification, and delivery tracking. Remove IntegrationSyncScheduler
and IntegrationProvider interface in favor of direct provider classes.